DOC: Update for the next release

--- a/lifelib/libraries/savings/savings_example1.ipynb
+++ b/lifelib/libraries/savings/savings_example1.ipynb
@@ -5,7 +5,7 @@
    "id": "19a8799c",
    "metadata": {},
    "source": [
-    "# Simple Stochastic Example\n",
+    "# 1. Simple Stochastic Example\n",
     "\n",
     "\n",
     "This example shows how to calculate TVOG (Time Value of Options and Guarantees) on a plain variable annuity product with GMAB by two methods, Monte Carlo simulation with 10,000 risk-neutral scenaios and the Black-Scholes-Merton option pricing formula for European put options.\n",
