--- a/lifelib/libraries/savings/savings_example2.ipynb
+++ b/lifelib/libraries/savings/savings_example2.ipynb
@@ -5,7 +5,7 @@
    "id": "3388b958",
    "metadata": {},
    "source": [
-    "# Extended Stochastic Example\n",
+    "# 2. Extended Stochastic Example\n",
     "\n",
     "\n",
     "This example extends the [Simple Stochastic Example](savings_example1.ipynb), and reflects fee collection, policy decrement, GMDB payouts and dynamic lapse rates.\n",
@@ -34,8 +34,8 @@
     "* `has_fees`: A switch to turn maintenance fees on and off\n",
     "* `has_mortality`: A switch to turn mortality decrement on and off\n",
     "* `has_lapse`: A switch to turn lapse decrement on and off\n",
-    "* `is_lapse_dynamic`: A switch turn dynamic lapse factor on and off\n",
-    "* `monte_carlo`: A summary table showing TVOG of GMDB, GMAB and their total\n",
+    "* `is_lapse_dynamic`: A switch to turn dynamic lapse factor on and off\n",
+    "* `monte_carlo`: A summary table showing the time values of guarantees and present value of fees\n",
     "* `pv_maint_fee`: Present value of maintenance fees deducted from account value\n",
     "\n",
     "To specify simulation configurations, following references are newly added.\n",
@@ -47,9 +47,9 @@
     "The formulas of the following cells are updated from `CashValue_ME_EX1`.\n",
     "\n",
     "* `formula_option_put`: Paramter $q$ is introduced to denote continuous dividend yield.\n",
-    "* `lapse_rate`\n",
-    "* `maint_fee_rate`\n",
-    "* `mort_rate`\n",
+    "* `lapse_rate`: Base lapses are updated and a dynamic factor is considered\n",
+    "* `maint_fee_rate`: Fee deduction can now be activated/deactivated\n",
+    "* `mort_rate`: Mortality rates are replaced\n",
     "\n",
     "Following input data is updated.\n",
     "\n",
@@ -58,7 +58,7 @@
     "\n",
     "`Projection` space is now parameterized with `sim_id`.\n",
     "\n",
-    "`Summary`, a new space to summarize the various results of `Projection` is introduced.\n",
+    "`Summary`, a new space to summarize the results of `Projection` with various `sim_id` is introduced.\n",
     "\n",
     "\n",
     "The following sections discuss in more details each change made on `CashValue_ME_EX1` to develop `CashValue_ME_EX2`.\n"
@@ -94,7 +94,7 @@
    "source": [
     "## Simulation patterns\n",
     "\n",
-    "First, we introduce switches to activage/deactivate changes made in this example to make it easy to examine the impact of each change. The list below shows the switches and what they control:\n",
+    "Switches are introduced to activage/deactivate changes made in this example to make it easy to examine the impact of each change. The list below shows the switches and what they control:\n",
     "\n",
     "* `has_fees`: Whether to deduct maintenance fees from account value\n",
     "* `has_mortality`: Whether to reflect mortality decrement\n",
@@ -362,8 +362,8 @@
     "The [Simple Stochastic Example](savings_example1.ipynb) shows two approaches to calculated the time value of GMAB. Both of the approaches can also be applicable with modification even when the maintenance fees are taken into consideration.\n",
     "\n",
     "The first approach is to use the Black-Scholes-Merton formula.\n",
-    "For calculating the time value of GMAB with maintenace fees on account value,\n",
-    "an extended form of the formula for European options on a stock paying a continuous dividend can be applied. Below is the extended formula, and $q$ denotes a continuous dividend yield. All the other symbols mean the same as the [Simple Stochastic Example](savings_example1.ipynb).          \n",
+    "For calculating the time value of GMAB with fee deduction,\n",
+    "an extended form of the formula for European options on a stock paying continuous dividends can be applied. Below is the extended formula, and $q$ denotes a continuous dividend yield. All the other symbols mean the same as the [Simple Stochastic Example](savings_example1.ipynb).          \n",
     "\n",
     "$$\n",
     "p=Xe^{-rT}N\\left(-d_{2}\\right)-S_{0}e^{-qT}N\\left(-d_{1}\\right)\n",
@@ -465,7 +465,7 @@
    "id": "48b5b0af",
    "metadata": {},
    "source": [
-    "The second approach is monte-carlo simulation with risk-neutral scenarios. We model the maintenance fees as a cashflow of fee payments made at the beginning of each month. The `maint_fee_rate` is updated so that it returns 1-12th of 1% when `has_fees` is `True`."
+    "The second approach is monte-carlo simulation with risk-neutral scenarios. We model the maintenance fees as a cashflow of fee payments made at the beginning of each month. The `maint_fee_rate` is updated so that it returns 1/12th of 1% when `has_fees` is `True`."
    ]
   },
   {
@@ -1520,7 +1520,7 @@
    "id": "35f55206",
    "metadata": {},
    "source": [
-    "The time value of GMDB and GMAB becomes larger than the previous results because the policyholder behaviour to take advantage of the guarantees. "
+    "The time value of GMDB and GMAB becomes larger than the previous results because of the policyholder behaviour to take advantage of the guarantees. "
    ]
   },
   {
@@ -1607,7 +1607,7 @@
     "The `Projection` space is parameterized with `sim_id`, so instead of setting a value to `Projection.sim_id`, you can get a space result for the value by a subscription (or call) operation. For example, `Projection[1]` yields a space derived from `Projection` and 1 is set to `sim_id` in that space. `Projection[2]` yields a space derived from `Projection` and 2 is set to `sim_id` in that space, and so on. These spaces are called item spaces and dynamically created by the subscription operations. The have the same definitions of cells and references as the definitions in `Projection`, except for `sim_id`.\n",
     "Since `Projection` is parameterized with `sim_id`, the values passed in the subscriptions are set to `sim_id` in the dynamic spaces.\n",
     "\n",
-    "The items spaces are usefule when you want results for different `sim_id` values at the same time, instead of one result at a time. The `result` cells in the `Summary` space make use of this feature, and it summarizes the results of `monte_carlo` cells of all the 5 `sim_id`."
+    "The items spaces are useful when you want results for different `sim_id` values at the same time, instead of one result at a time. The `result` cells in the `Summary` space make use of this feature, and it summarizes the results of `monte_carlo` cells of all the 5 `sim_id`."
    ]
   },
   {
