DOC: Update docs

--- a/lifelib/libraries/savings/savings_example1.ipynb
+++ b/lifelib/libraries/savings/savings_example1.ipynb
@@ -475,7 +475,7 @@
     "## Making the model stochastic\n",
     "\n",
     "The approach taken for this example to make `CashValue_ME` stochastic is to index `model_point` not by model point ID, but by the combination of scenaio ID and model point ID.\n",
-    "Based on this approach, the `model_point` DataFrame has a MultiIndex, which has two levels, scenario ID denoted by `scen_id` and model point ID denoted by `scen_id`, and now the number of rows in `model_point` is the number of scenaios times the number of model points. For each model point ID, there are identical model points as many as the number of scnarios.\n",
+    "Based on this approach, the `model_point` DataFrame has a MultiIndex, which has two levels, scenario ID denoted by `scen_id` and model point ID denoted by `point_id`, and now the number of rows in `model_point` is the number of scenaios times the number of model points. For each model point ID, there are identical model points as many as the number of scnarios.\n",
     "\n",
     "This approach consumes more memory, but the changes to be made in the model are minimal, and the model runs fast because an identical operation on all the model points across all the scenarios can be performed at the same time as a vector operation along the MultiIndex of `model_point`.\n",
     "\n",
