--- a/lifelib/libraries/basiclife/generate_model_points_ASL.ipynb
+++ b/lifelib/libraries/basiclife/generate_model_points_ASL.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generating model points with issue date"
+    "# Generating model points for ASL"
    ]
   },
   {
