DOC: Introduce nbsphinx-link

--- a/lifelib/projects/simplelife/simplelife-space-overview.ipynb
+++ b/lifelib/projects/simplelife/simplelife-space-overview.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'simplelife': <Model simplelife>}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import modelx as mx\n",
     "mx.get_models()"
@@ -67,9 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Input': <UserSpace simplelife.Input>, 'LifeTable': <UserSpace simplelife.LifeTable>, 'Economic': <UserSpace simplelife.Economic>, 'BaseProj': <UserSpace simplelife.BaseProj>, 'PV': <UserSpace simplelife.PV>, 'Projection': <UserSpace simplelife.Projection>}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.spaces"
    ]
@@ -83,9 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Input', 'LifeTable', 'Economic', 'BaseProj', 'PV', 'Projection']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(model.spaces.keys())"
    ]
@@ -99,9 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<UserSpace simplelife.Projection>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.Projection"
    ]
@@ -115,9 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<UserSpace simplelife.Projection>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.spaces['Projection']"
    ]
@@ -131,27 +186,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Policy': <UserSpace simplelife.Projection.Policy>, 'Assumptions': <UserSpace simplelife.Projection.Assumptions>}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.Projection.spaces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<UserSpace simplelife.Projection.Assumptions>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.Projection.Assumptions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<UserSpace simplelife.Projection.Assumptions>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.Projection.spaces['Assumptions']"
    ]
@@ -172,9 +260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Input', 'LifeTable', 'Economic', 'BaseProj', 'PV', 'Projection']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(model.spaces.keys())"
    ]
@@ -206,9 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<UserSpace simplelife.BaseProj>, <UserSpace simplelife.PV>]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.Projection.bases"
    ]
@@ -232,9 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Sex', 'IntRate', 'TableID')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.LifeTable.parameters"
    ]
@@ -250,9 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lambda Sex, IntRate, TableID: None"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.LifeTable.formula"
    ]
@@ -268,9 +400,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ItemSpace simplelife.Projection[1, 1]>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.Projection[1]"
    ]
@@ -299,9 +442,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lambda PolicyID, ScenID=1: None"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.Projection.formula"
    ]
@@ -319,9 +473,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AccumCF',\n",
+       " 'Assumptions',\n",
+       " 'AttAge',\n",
+       " 'BenefitAccDth',\n",
+       " 'BenefitAccHosp',\n",
+       " 'BenefitAnn',\n",
+       " 'BenefitDeath',\n",
+       " 'BenefitLiving',\n",
+       " 'BenefitMat',\n",
+       " 'BenefitOther',\n",
+       " 'BenefitSickHosp',\n",
+       " 'BenefitSurg',\n",
+       " 'BenefitSurr',\n",
+       " 'BenefitTotal',\n",
+       " 'ChangeRsrv',\n",
+       " 'DiscRate',\n",
+       " 'ExpsAcq',\n",
+       " 'ExpsAcqTotal',\n",
+       " 'ExpsCommInit',\n",
+       " 'ExpsCommRen',\n",
+       " 'ExpsCommTotal',\n",
+       " 'ExpsMaint',\n",
+       " 'ExpsMaintTotal',\n",
+       " 'ExpsOther',\n",
+       " 'ExpsTotal',\n",
+       " 'IncomeTotal',\n",
+       " 'InflFactor',\n",
+       " 'InsurIF_Beg1',\n",
+       " 'InsurIF_End',\n",
+       " 'IntAccumCF',\n",
+       " 'InterestNetCF',\n",
+       " 'InvstIncome',\n",
+       " 'InvstRetRate',\n",
+       " 'NetInsurCF',\n",
+       " 'PV_BenefitDeath',\n",
+       " 'PV_BenefitMat',\n",
+       " 'PV_BenefitSurr',\n",
+       " 'PV_BenefitTotal',\n",
+       " 'PV_Check',\n",
+       " 'PV_ExpsAcq',\n",
+       " 'PV_ExpsCommTotal',\n",
+       " 'PV_ExpsMaint',\n",
+       " 'PV_ExpsTotal',\n",
+       " 'PV_NetCashflow',\n",
+       " 'PV_NetCashflowForCheck',\n",
+       " 'PV_PremIncome',\n",
+       " 'PV_SumInsurIF',\n",
+       " 'Policy',\n",
+       " 'PolsAccDeath',\n",
+       " 'PolsAccHosp',\n",
+       " 'PolsAnnuity',\n",
+       " 'PolsDeath',\n",
+       " 'PolsIF_AftMat',\n",
+       " 'PolsIF_Beg',\n",
+       " 'PolsIF_Beg1',\n",
+       " 'PolsIF_End',\n",
+       " 'PolsLiving',\n",
+       " 'PolsMaturity',\n",
+       " 'PolsNewBiz',\n",
+       " 'PolsOther',\n",
+       " 'PolsRenewal',\n",
+       " 'PolsSickHosp',\n",
+       " 'PolsSurg',\n",
+       " 'PolsSurr',\n",
+       " 'PremIncome',\n",
+       " 'ProfitBefTax',\n",
+       " 'ReserveHospRsrvEnd',\n",
+       " 'ReservePremRsrvEnd',\n",
+       " 'ReserveTotal_End',\n",
+       " 'ReserveUernPremEnd',\n",
+       " 'SizeAnnPrem',\n",
+       " 'SizeBenefitAccDth',\n",
+       " 'SizeBenefitAccHosp',\n",
+       " 'SizeBenefitAnn',\n",
+       " 'SizeBenefitDeath',\n",
+       " 'SizeBenefitLiving',\n",
+       " 'SizeBenefitMat',\n",
+       " 'SizeBenefitOther',\n",
+       " 'SizeBenefitSickHosp',\n",
+       " 'SizeBenefitSurg',\n",
+       " 'SizeBenefitSurr',\n",
+       " 'SizeExpsAcq',\n",
+       " 'SizeExpsCommInit',\n",
+       " 'SizeExpsCommRen',\n",
+       " 'SizeExpsMaint',\n",
+       " 'SizeExpsOther',\n",
+       " 'SizeInvstIncome',\n",
+       " 'SizePremium',\n",
+       " 'SizeReservePremRsrvAftMat',\n",
+       " 'SizeReservePremRsrvEnd',\n",
+       " 'SizeReserveTotalAftMat',\n",
+       " 'SizeReserveUernPremAftMat',\n",
+       " 'SizeReserveUernPremEnd',\n",
+       " 'SizeSumAssured',\n",
+       " '__builtins__',\n",
+       " '_self',\n",
+       " '_space',\n",
+       " 'asmp',\n",
+       " 'last_t',\n",
+       " 'pol',\n",
+       " 'scen']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir(model.Projection)"
    ]
@@ -329,7 +594,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -343,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
