--- a/lifelib/projects/smithwilson/smithwilson-overview.ipynb
+++ b/lifelib/projects/smithwilson/smithwilson-overview.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u,\n",
+       " m,\n",
+       " mu,\n",
+       " W,\n",
+       " m_vector,\n",
+       " mu_vector,\n",
+       " W_matrix,\n",
+       " zeta_vector,\n",
+       " zeta,\n",
+       " P,\n",
+       " R}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = m.SmithWilson\n",
     "s.cells"
@@ -89,36 +110,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s.N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.028587456851912472"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s.UFR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.128562"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s.alpha"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.00803,\n",
+       " -0.00814,\n",
+       " -0.00778,\n",
+       " -0.00725,\n",
+       " -0.00652,\n",
+       " -0.00565,\n",
+       " -0.0048,\n",
+       " -0.00391,\n",
+       " -0.00313,\n",
+       " -0.00214,\n",
+       " -0.0014,\n",
+       " -0.00067,\n",
+       " -8e-05,\n",
+       " 0.00051,\n",
+       " 0.00108,\n",
+       " 0.00157,\n",
+       " 0.00197,\n",
+       " 0.00228,\n",
+       " 0.0025,\n",
+       " 0.00264,\n",
+       " 0.00271,\n",
+       " 0.00274,\n",
+       " 0.0028,\n",
+       " 0.00291,\n",
+       " 0.00309]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s.spot_rates"
    ]
@@ -132,9 +221,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.0021400000002478325,\n",
+       " 0.0026399999998294454,\n",
+       " 0.004987777012509076,\n",
+       " 0.009589281258343796,\n",
+       " 0.013152667277319896,\n",
+       " 0.0157106404653784,\n",
+       " 0.01758288328289881,\n",
+       " 0.018999270994646267,\n",
+       " 0.020104712394634294,\n",
+       " 0.020990537324858893,\n",
+       " 0.021716028320261982,\n",
+       " 0.02232103673631003,\n",
+       " 0.02283325665510394,\n",
+       " 0.023272509104879324,\n",
+       " 0.023653347800582036]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[s.R[i] for i in range(10, 151, 10)]"
    ]
@@ -148,9 +262,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.00214, 0.00108, 0.00264, 0.00309]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[s.spot_rates[i-1] for i in range(10, 26, 5)]"
    ]
@@ -184,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -241,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,9 +391,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<UserSpace smithwilson2.SmithWilson>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mx.cur_space()"
    ]
@@ -287,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,9 +566,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u,\n",
+       " m,\n",
+       " mu,\n",
+       " W,\n",
+       " m_vector,\n",
+       " mu_vector,\n",
+       " W_matrix,\n",
+       " zeta_vector,\n",
+       " zeta,\n",
+       " P,\n",
+       " R}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s2.cells"
    ]
@@ -448,9 +605,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.0021400000002478325,\n",
+       " 0.001079999999791026,\n",
+       " 0.0026399999998294454,\n",
+       " 0.0030899999998661443,\n",
+       " 0.004987777012509076,\n",
+       " 0.007366600230549469,\n",
+       " 0.009589281258343796,\n",
+       " 0.011517021559910967,\n",
+       " 0.013152667277319896,\n",
+       " 0.014535885669793025,\n",
+       " 0.0157106404653784,\n",
+       " 0.016715719536043006,\n",
+       " 0.01758288328289881,\n",
+       " 0.018337416110107085,\n",
+       " 0.018999270994646267,\n",
+       " 0.019584201846686966,\n",
+       " 0.020104712394634294,\n",
+       " 0.020570802184906256,\n",
+       " 0.020990537324858893]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[s2.R[i] for i in range(10, 101, 5)]"
    ]
@@ -477,7 +663,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -491,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
